chore: Use UID in event exporter [DHIS2-17790]